--- a/styles.css
+++ b/styles.css
@@ -124,8 +124,7 @@
     display: flex;
     justify-content: space-around;
     margin-top: 8px;
-    background-color: rgba(0, 0, 0, 0.6);
-            color: #ffffff;
+    color: black;
   
 }
 
@@ -173,7 +172,7 @@
 
  /* Estilos para a div principal */
  .blue-container {
-    background-color: dodgerblue;
+    
     padding: 20px;
     display: flex;
     justify-content: space-between;
