--- a/styles.css
+++ b/styles.css
@@ -30,16 +30,7 @@
     background-color: rgba(0, 0, 0, 0.7);
 }
 
-.modal-content {
-    position: relative;
-    background-color: #fefefe;
-    margin: 5% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 600px;
-    border-radius: 10px; /* Adicionado para bordas arredondadas */
-}
+
 
 .close {
     position: absolute;
@@ -55,23 +46,6 @@
     color: #000;
 }
 
-/* Estilos adicionados para o vídeo responsivo */
-.video-container {
-    position: relative;
-    padding-bottom: 56.25%; /* Proporção 16:9 para vídeo responsivo */
-    height: 0;
-    overflow: hidden;
-}
-
-#playButton {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    font-size: 24px;
-    cursor: pointer;
-}
 
 /* Estilos para o contador */
 
@@ -206,3 +180,45 @@
     background-color: aqua;
     color: orangered;
 }
+
+
+
+#playButton {
+    position: absolute;
+    bottom: 6.5%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.video-container {
+    position: relative;
+    width: 100%;
+    text-align: center;
+}
+
+.video-container img {
+    max-width: 100%;
+    height: auto;
+}
+
+#videoModal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
